# anilibria-rs

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: publish.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: catalog.toml
src-tauri/src/: main.rs
