[package]
name = "anilibria-rs"
version = "0.1.0"
description = "AniLibrix Rust Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anilibria_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Наш сетевой клиент (как axios, только на Rust)
reqwest = { version = "0.11", features = ["json"] }
# Позволяет Rust выполнять задачи асинхронно
tokio = { version = "1", features = ["full"] }
tauri-plugin-window-state = "2.4.1"

[features]
# Оставляем стандартные фичи Tauri
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
